project/logs/20250801_100400.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3d.VS.hlsl, profile:vs_6_0

Object3d.VS.hlsl:24:39: error: use of undeclared identifier 'inverse'
    float3x3 normalMatrix = transpose(inverse((float3x3) gTransformaitionMatrix.World));
                                      ^

Compile Succeeded, path:Object3d.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3d.PS.hlsl, profile:ps_6_0

Compile Succeeded, path:Object3d.PS.hlsl, profile:ps_6_0

